--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -1,3 +1,1 @@
-The preface pretty much says it all.  \par
-
-Second paragraph of abstract starts here.
+I propose a monthly index of non-asset-market uncertainty. The index is constructed through a approximate dynamic factor model with several main uncertainty indexes as data. This strategy considerably reduces extreme movements in the level of uncertainty, which is more appealing with theory. Likewise, I compare the new index with indicators of uncertainty and estimate the impact of an uncertainty shock on the dynamics of macroeconomic variables.
