--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -11,7 +11,7 @@ knit: "bookdown::render_book"
 site: bookdown::bookdown_site
 output: thesisdown::thesis_pdf
 abstract: |
-  `r paste(readLines("00-abstract.Rmd"), collapse = "\n  ")`
+  `r paste(readLines("00-Abstract.Rmd"), collapse = "\n  ")`
 bibliography: [bib/thesis.bib, bib/packages.bib]
 csl: csl/apa.csl
 lot: true
