Add aproximate factor model and PC1 references.

--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -393,3 +393,25 @@
     Pages   = {1--22},
     DOI     = {10.1002/jae.659}
 }
+
+@Article{chamroth:1983,
+    Author  = {Gary Chamberlain and Michael Rothschild},
+    Title   = {Arbitrage, Factor Structure, and Mean-Variance Analysis on Large Asset Markets},
+    Year    = {1983},
+    Journal = {Econometrica},
+    Volume  = {51},
+    Number  = {5},
+    Pages   = {1281--1304},
+    DOI     = {10.2307/1912275}
+}
+
+@article{baing:2013,
+    Author  = {Jushan Bai and Serena Ng},
+    Title   = {Principal components estimation and identification of static factors},
+    Year    = {2013},
+    Journal = {Journal of Econometrics},
+    Volume  = {176},
+    Number  = {1},
+    Pages   = {18--29},
+    DOI     = {10.1016/j.jeconom.2013.03.007}
+}
