Add index construction references.

--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -270,7 +270,7 @@
     Journal = {Bank of England Quarterly Bulletin},
     Volume  = {38},
     Pages   = {30--37},
-    Url     = {shorturl.at/jklKT}
+    URL     = {shorturl.at/jklKT}
 }
 
 @Article{clements:2004,
@@ -405,7 +405,7 @@
     DOI     = {10.2307/1912275}
 }
 
-@article{baing:2013,
+@Article{baing:2013,
     Author  = {Jushan Bai and Serena Ng},
     Title   = {Principal components estimation and identification of static factors},
     Year    = {2013},
@@ -414,4 +414,101 @@
     Number  = {1},
     Pages   = {18--29},
     DOI     = {10.1016/j.jeconom.2013.03.007}
+}
+
+@Inbook{stocwats:1991,
+    Author    = {James Stock and Mark W.~Watson},
+    Title     = {A Probability Model of the Coincident Economic Indicators},
+    Booktitle = {The Leading Economic Indicators: New Approaches and Forecasting Records},
+    Publisher = {Cambridge University Press},
+    Year      = {1991},
+    Editor    = {G.~Moore and K.~Lahiri},
+    Pages     = {63--90},
+    Address   = {Cambridge}
+}
+
+@Inbook{stocwats:1993,
+    Author    = {James Stock and Mark W.~Watson},
+  	Title     = {A Procedure for Predicting Recessions with Leading Indicators: Econometric Issues and Recent Experience},
+  	Booktitle = {Business Cycles, Indicators and Forecasting},
+  	Publisher = {University of Chicago Press},
+  	Year      = {1993},
+  	Editor    = {James Stock and Mark W.~Watson},
+  	Pages     = {95--156},
+  	Address   = {Chicago}
+}
+
+@Article{cronclay:2005,
+    Author  = {Theodore M.~Crone and Alan Clayton-Matthews},
+    Title   = {Consistent Economic Indexes for the 50 States},
+    Year    = {2005},
+    Journal = {The Review of Economics and Statistics},
+    Volume  = {87},
+    Number  = {4},
+    Pages   = {593--603},
+    URL     = {http://www.jstor.org/stable/40042878}
+}
+
+@Article{marimura:2003,
+    Author  = {Roberto S.~Mariano and Yasutomo Murasawa},
+    Title   = {A new coincident index of business cycles based on monthly and quarterly series},
+    Year    = {2003},
+    Journal = {Journal of Applied Econometrics},
+    Volume  = {18},
+    Number  = {4},
+    Pages   = {427--443},
+    DOI     = {10.1002/jae.695}
+}
+
+@Article{aruodiebscot:2009,
+    Author  = {S.~Borağan Aruoba and Francis X.~Diebold and Chiara Scotti},
+    Title   = {Real-Time Measurement of Business Conditions},
+    Year    = {2009},
+    Journal = {Journal of Business \& Economic Statistics},
+    Volume  = {27},
+    Number  = {4},
+    Pages   = {417--427},
+    DOI     = {10.1198/jbes.2009.07205}
+}
+
+@Article {stocwats:1999,
+    Author  = {James Stock and Mark W.~Watson},
+    Title   = {Forecasting Inflation},
+    Year    = {1999},
+    Journal = {Journal of Monetary Economics},
+    Volume  = {44},
+    Number  = {2},
+    Pages   = {293--335},
+    DOI     = {10.1016/S0304-3932(99)00027-6}
+}
+
+@Techreport{altibasscrisfornhalllippreicvero:2001,
+    Author      = {Filippo Altissimo and Antonio Bassanetti and Riccardo Cristadoro and Mario Forni and Marc Hallin and Marco Lippi and Lucrezia Reichlin and Giovanni Veronese},
+    Title       = {{Eurocoin}: A Real Time Coincident Indicator of the Euro Area Business Cycle},
+    Year        = {2001},
+    Type        = {{CEPR} Discussion Papers},
+    Number      = {3108}
+}
+
+@Article{alticrisfornlippvero:2010,
+    Author  = {Filippo Altissimo and Riccardo Cristadoro and Mario Forni and Marco Lippi and Giovanni Veronese},
+    Title   = {New {Eurocoin}: Tracking Economic Growth in Real Time},
+    Year    = {2010},
+    Journal = {The Review of Economics and Statistics},
+    Volume  = {92},
+    Number  = {4},
+    Pages   = {1024--1034},
+    DOI     = {10.1162/REST\_a\_00045}
+}
+
+@Techreport{stocwats:1990,
+    Title       = {New Indexes of Coincident and Leading Economic Indicators},
+    Author      = {James H.~Stock and Mark W.~Watson},
+    Institution = {National Bureau of Economic Research},
+    Type        = {Working Pape},
+    Series      = {Reprint Series},
+    Number      = {1380},
+    Year        = {1990},
+    Month       = {April},
+    URL         = {http://www.nber.org/papers/r1380}
 }
